Only show active orders in UI and sort OrderList better.